# n225-open-gap-tail

./: .env.example  .gitignore  README.md  ask_reviewer.py  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: data.md  development_audit.md  development_audit_prompt.md  development_prompt.md  discussion_qa.md  faq.md  future_work.md  index.md  manuscript_audit.md  manuscript_audit_prompt.md  paper_plan.md  results_snapshot.md
docs/audit/: development.md  index.md  manuscript.md
docs/javascripts/: mermaid-init.js
docs/tables/tailrisk_20160719_20260508_20260512T131041Z_commit_f420c4fa/: appendix_benchmark_all_models_table.tex  appendix_benchmark_configuration_sensitivity_table.tex  appendix_evt_threshold_sensitivity_table.tex  appendix_lgbm_all_models_table.tex  appendix_lgbm_configuration_sensitivity_table.tex  benchmark_left_tail_risk_table.tex  benchmark_metrics_table.tex  benchmark_right_tail_risk_table.tex  ml_tail_dst_attenuation_table.tex  ml_tail_left_tail_risk_table.tex  ml_tail_metrics_table.tex  ml_tail_promoted_tail_models_table.tex  ml_tail_result_matrix_summary_table.tex  ml_tail_result_matrix_table.tex  ml_tail_right_tail_risk_table.tex  model_metrics_breach_audit.md  model_metrics_full_rows.csv  tailrisk_claim_scope_table.tex  tailrisk_dm_mcs_summary_table.tex  tailrisk_es_severity_table.tex  tailrisk_hedge_trigger_diagnostics_table.tex  tailrisk_model_inventory_table.tex  tailrisk_predictor_block_coverage_table.tex  tailrisk_selected_model_performance_table.tex
docs/tables/tailrisk_20160719_20260522_20260525T142611Z_commit_bf63b13d/: appendix_benchmark_all_models_table.tex  appendix_lgbm_all_models_table.tex  benchmark_left_tail_risk_table.tex  benchmark_metrics_table.tex  benchmark_right_tail_risk_table.tex  ml_tail_left_tail_risk_table.tex  ml_tail_metrics_table.tex  ml_tail_promoted_tail_models_table.tex  ml_tail_result_matrix_summary_table.tex  ml_tail_result_matrix_table.tex  ml_tail_right_tail_risk_table.tex  model_metrics_breach_audit.md  model_metrics_full_rows.csv  tailrisk_claim_scope_table.tex  tailrisk_dm_summary_table.tex  tailrisk_es_severity_table.tex  tailrisk_model_inventory_table.tex  tailrisk_predictor_block_coverage_table.tex  tailrisk_selected_model_performance_table.tex
docs/tables/tailrisk_20160719_20260522_20260527T083659Z_commit_7f628ff4/: appendix_benchmark_all_models_table.tex  appendix_evt_threshold_sensitivity_table.tex  appendix_lgbm_all_models_table.tex  appendix_lgbm_configuration_sensitivity_table.tex  benchmark_left_tail_risk_table.tex  benchmark_metrics_table.tex  benchmark_right_tail_risk_table.tex  ml_tail_left_tail_risk_table.tex  ml_tail_metrics_table.tex  ml_tail_promoted_tail_models_table.tex  ml_tail_result_matrix_summary_table.tex  ml_tail_result_matrix_table.tex  (+11 more)
scripts/: check_external_data_paths.py  export_model_metrics_breach_audit.py  lint_architecture.py  lint_legacy_names.py  lint_mypy_ignore_debt.py
src/n225_open_gap_tail/: __init__.py  calendars.py  cboe.py  cli.py  config.py  contracts.py  datalake.py  fred.py  jquants.py  massive.py  paper.py  research_config.py  schemas.py  snapshot.py
tests/: test_benchmark_advanced.py  test_calendars.py  test_cboe.py  test_cli.py  test_comparison_evidence.py  test_config.py  test_contracts.py  test_cpa.py  test_datalake.py  test_docs_contract.py  test_fred.py  test_jquants.py  test_massive.py  test_ml_tail.py  test_paper.py  test_pipeline.py  test_research_config.py  test_result_matrix.py  test_schemas.py  test_sensitivity.py  test_snapshot.py  test_source_probe.py  test_us_options.py
(+104 files in other folders)
