[project]
name = "n225-open-gap-tail"
version = "0.1.0"
description = "Research-grade empirical pipeline for testing the incremental predictive content of U.S. close information for OSE Nikkei 225 futures pre-open downside tail risk."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "arch>=7.2.0",
    "boto3>=1.34.0",
    "duckdb>=1.2.0",
    "exchange-calendars>=4.9",
    "httpx>=0.28.0",
    "joblib>=1.4.2",
    "lightgbm>=4.5.0",
    "massive>=2.5.0",
    "matplotlib>=3.10.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "polars>=1.20.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "statsmodels>=0.14.4",
    "typer>=0.15.0",
    "tzdata>=2025.1",
    "xxhash>=3.5.0",
]

[project.optional-dependencies]
docs = ["mkdocs>=1.6.1", "mkdocs-material>=9.6.0"]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.14.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=n225_open_gap_tail --cov-report=term-missing --cov-fail-under=95"
markers = [
    "unit: fast deterministic unit tests.",
    "schema: schema and artifact-contract tests.",
    "smoke: lightweight source/client smoke tests with mocked or bounded inputs.",
    "vendor: tests that touch licensed or network vendor services; excluded from default CI.",
    "realdata: tests requiring local licensed real market data; excluded from default CI.",
    "slow: long-running local validation tests.",
]
